# kreditax

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/api/v1/: audit.py  health.py  predict.py
app/core/: config.py
app/schemas/: __init__.py  credit_application.py
app/services/: audit_service.py  explain_service.py  model_service.py
dashboard/: README.md  __init__.py  app.py
docs/: DASHBOARD.md  PROJECT_STRUCTURE.md  QUICKSTART.md  api.md  architecture.md  pojk-compliance.md
infra/docker/: Dockerfile
ml/: __init__.py
ml/evaluation/: __init__.py  evaluate.py
ml/experiments/: metrics.json
ml/features/: __init__.py  preprocessing.py
ml/training/: __init__.py  train.py
scripts/: __init__.py  generate_data.py  train_model.py
src/: data_generator.py  preprocessing.py  schema.py
tests/app/: __init__.py  test_api.py
tests/ml/: __init__.py  test_preprocessing.py
